# hrGPT

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
code/hr_gpt/: Cargo.toml
hrgpt/: Dockerfile  anonymization.py  build_docker.sh  default_config.json  deploy_docker.sh  extraction.py  main.py  matcher.py  pyproject.toml  requirements.txt  scoring.py  utils.py
hrgpt/anonymization/: anonymization.py
hrgpt/chat/: chat.py  chat_factory.py  google_chat.py  openai_chat.py  replicate_chat.py
hrgpt/config/: config.py
hrgpt/evaluation/: csv_loader.py  evaluation.py
hrgpt/extraction/: extraction.py
hrgpt/logger/: logger.py
hrgpt/matching/: matching.py
hrgpt/prompting/: prompting.py
hrgpt/scoring/: scoring.py
hrgpt/server/: server.py
hrgpt/utils/: argument_utils.py  chat_utils.py  config_utils.py  extraction_utils.py  file_utils.py  init_utils.py  iterable_utils.py  math_utils.py  message_utils.py  path_utils.py  pdf_utils.py  polars_utils.py  prompting_utils.py  reporting_utils.py  sample_utils.py  score_utils.py  secret_utils.py  serialization_utils.py  test_score_utils.py  testing_utils.py  timing_utils.py  translation_utils.py  type_utils.py
libs/utils-lib/: .swcrc  package.json  project.json  (+1 more)
online_form_responses/: responses.csv  responses.xlsx
presentation/: closure_meeting_presentation.pptx  kick_off_meeting_presentation.pptx
scripts/: anonymize_applicants.py  utils.py
thesis/: build-all.sh  build-thesis.sh  clear-all.sh  example.ist  thesis.bib  thesis.ist  thesis.tex  thesisclass.dtx  thesisclass.ins
(+28 files in other folders)
